--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=BPI-BIT MPU9250 Master Mode Library
 category=Device Control
 url=https://github.com/BPI-STEAM/MPU9250
 architectures=*
+includes=MPU9250.h
